--- a/style.css
+++ b/style.css
@@ -344,3 +344,47 @@ section p {
     width: 100%;
   }
 }
+
+#aboutus {
+  background-color: #f0ece5;
+  padding: 50px 0;
+  text-align: center;
+}
+
+.team {
+  font-size: 2.5rem;
+  margin-bottom: 40px;
+  color: rgb(51, 184, 255);
+  text-align: center;
+}
+
+.cards{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 30px;
+}
+
+.card {
+  background-color: #f3f3f3;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 250px;
+  text-align: center;
+}
+
+.card img {
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  object-fit: cover;
+  margin-bottom: 15px;
+}
+
+.textBackground {
+  margin-top: 10px;
+  font-size: 1rem;
+  color: black;
+  text-align: center;
+}
