--- a/components/RegisterComponent.html
+++ b/components/RegisterComponent.html
@@ -15,7 +15,11 @@
   <body>
     <div class="wrapper">
       <form action="">
-        <h1>Login</h1>
+        <h1>Sign up</h1>
+        <div class="input-box">
+          <input type="email" placeholder="Email" required />
+          <i class="bx bxs-envelope"></i>
+        </div>
         <div class="input-box">
           <input type="text" placeholder="Username" required />
           <i class="bx bxs-user"></i>
@@ -26,15 +30,12 @@
         </div>
         <div class="remember">
           <label><input type="checkbox" />Remember me</label>
-          <a href="#">Forgot your password?</a>
         </div>
-        <button type="submit" class="btn">Login</button>
+        <button type="submit" class="btn">Sign up</button>
         <div class="login-link">
           <p>
-            Don't have an account?
-            <a onclick="window.location.href='RegisterComponent.html'"
-              >Register</a
-            >
+            Already have an account?
+            <a onclick="window.location.href='LoginComponent.html'">Login</a>
           </p>
         </div>
       </form>
